<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/tableLayout">

            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button
                        android:text="@string/_7"
                        android:layout_height="80dp" tools:layout_editor_absoluteY="212dp"
                        tools:layout_editor_absoluteX="25dp" android:id="@+id/sevenButton"
                        android:layout_width="wrap_content" android:textSize="25sp"/>
                <Button
                        android:text="@string/_8"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" android:id="@+id/eightButton" android:textSize="25sp"/>
                <Button
                        android:text="@string/_9"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" android:id="@+id/nineButton" android:textSize="25sp"/>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button
                        android:text="@string/_4"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" android:id="@+id/fourButton" android:textSize="25sp"/>
                <Button
                        android:text="5"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" android:id="@+id/fiveButton" android:textSize="25sp"/>
                <Button
                        android:text="6"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" android:id="@+id/sixButton" android:textSize="25sp"/>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button
                        android:text="1"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" android:id="@+id/oneButton" android:textSize="25sp"/>
                <Button
                        android:text="2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" android:id="@+id/twoButton" android:textSize="25sp"/>
                <Button
                        android:text="3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" android:id="@+id/threeButton" android:textSize="25sp"/>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button
                        android:text="0"
                        android:layout_width="74dp"
                        android:layout_height="80dp" android:id="@+id/zeroButton" android:textSize="25sp"/>
                <Button
                        android:text="."
                        android:layout_width="wrap_content"
                        android:layout_height="80dp" android:id="@+id/button" android:textSize="25sp"/>
            </TableRow>

        </TableLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="319dp"
                app:layout_constraintStart_toEndOf="@+id/tableLayout" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout2"
        >
            <Button
                    android:text="@string/division"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/divisionButton" android:textSize="15sp"/>
            <Button
                    android:text="@string/add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/addButton" android:textSize="15sp"/>
            <Button
                    android:text="@string/minus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/minusButton" android:textSize="15sp"/>
            <Button
                    android:text="+"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/plusButton" android:textSize="15sp"/>
            <Button
                    android:text="@string/enter"
                    android:layout_width="match_parent"
                    android:layout_height="122dp" android:id="@+id/enterButton" android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
            android:layout_width="0dp"
            android:layout_height="264dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/listView"/>
</android.support.constraint.ConstraintLayout>